# tsight-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  config_example.yaml  docker-compose.yml
.github/workflows/: CI.yml
delivery/: linux_installer.sh
src/: client.rs  config.rs  filters.rs  lib.rs  main.rs  models.rs
src/agent/: base.rs  datasource.rs  mod.rs
src/executors/: base.rs  clickhouse_source.rs  mod.rs
tests/: agent_mod_test.rs  base_tests.rs  clickhouse_filters_test.rs  clickhouse_jobs_handling_integration_test.rs  clickhouse_jobs_handling_with_filters_integration_test.rs  clickhouse_observation_handling_integration_test.rs  clickhouse_schema_discovery_executor_test.rs  clickhouse_schema_discovery_integration_test.rs  clickhouse_source_test.rs  filters_test.rs  main_test.rs  test-config.yaml  test_config.rs
tests/init_datasources/clickhouse/: 01_create_tables.sql
tests/test_configs/: combined_sql_filters_config.yaml  exclude_only_sql_filters_config.yaml  include_only_sql_filters_config.yaml  invalid_sql_filters_config.yaml  simple_config.yaml
